--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,9 @@ plugins:
 
 minima:
   exclude_nav: true
-  
+
+include:
+  - .well-known
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
