--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,15 @@
 title: Ohana Sports Tech
 email: info@ohanasports.net
 description: >- # this means to ignore newlines until "baseurl:"
+  Ohana Sports Tech - Your sports technology partner
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ohanasports.net" # the base hostname & protocol for your site, e.g. http://example.com
+
+# Social media and SEO
+logo: /assets/images/AppIcon.png
+social:
+  name: Ohana Sports Tech
+  links: []
 
 # Build settings
 theme: minima
